syntax = "proto3";

package api.adgroup.v1;

import "google/api/annotations.proto";

option go_package = "ad-marketing/api/adgroup/v1;v1";
option java_multiple_files = true;
option java_package = "api.adgroup.v1";

service Adgroup {
  rpc CreateAdgroup (CreateAdgroupRequest) returns (CreateAdgroupReply) {
    option (google.api.http) = {
      post: "/v1/adgroup"
    };
  };
  rpc UpdateAdgroup (UpdateAdgroupRequest) returns (UpdateAdgroupReply);
  rpc DeleteAdgroup (DeleteAdgroupRequest) returns (DeleteAdgroupReply);
  rpc GetAdgroup (GetAdgroupRequest) returns (GetAdgroupReply);
  rpc ListAdgroup (ListAdgroupRequest) returns (ListAdgroupReply);
}

message CreateAdgroupRequest {
  int64 adgroup_id = 1;
  string adgroup_name = 2;
}
message CreateAdgroupReply {
  int64 adgroup_id = 1;
}

message UpdateAdgroupRequest {}
message UpdateAdgroupReply {}

message DeleteAdgroupRequest {}
message DeleteAdgroupReply {}

message GetAdgroupRequest {}
message GetAdgroupReply {}

message ListAdgroupRequest {}
message ListAdgroupReply {}